--- a/estilos.css
+++ b/estilos.css
@@ -114,7 +114,7 @@ input, textarea {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #A9A9A9;
     border-radius: 5px;
 }
 
